--- a/Viz/Viz.html
+++ b/Viz/Viz.html
@@ -100,10 +100,10 @@ Titles
 <li>Behind the Scenes!!     (2016)
 <li>Ben 10: Omniverse Halloween Special     (2013)
 <li>Benkei in New York  2(001 )
-<li>The Best of Pokemon Adventures: Red (2006)
-<li>The Best of Pokemon Adventures: Yellow  (2006)
+<li>Best of Pokemon Adventures: Red (2006)
+<li>Best of Pokemon Adventures: Yellow  (2006)
 <li>Beyblade    (2004)
-<li>The Big O   (2002)
+<li>Big O   (2002)
 <li>Bio-Booster Armor Guyver    (1993)
 <li>Biomega     (2010)
 <li>Black &amp; White   (1998)
@@ -136,7 +136,7 @@ Titles
 <li>Buso Renkin (2006)
 <li>Butterflies, Flowers    (2009)
 <li>Cactus’s Secret     (2010)
-<li>The Cain Saga   (2006)
+<li>Cain Saga   (2006)
 <li>Candy Color Paradox     (2019)
 <li>Captive Hearts  (2008)
 <li>Case Closed     (2004)
@@ -170,7 +170,7 @@ Titles
 <li>Deadman Wonderland  (2014)
 <li>Death Note  (2005)
 <li>Demon Love Spell    (2012)
-<li>The Demon Prince of Momochi House   (2015)
+<li>Demon Prince of Momochi House   (2015)
 <li>Demon Slayer: Kimetsu no Yaiba  (2018)
 <li>Dengeki Daisy   (2010)
 <li>Descendants of Darkness     (2004)
@@ -198,7 +198,7 @@ Titles
 <li>Dragon Drive    (2007)
 <li>Drifting Classroom  (2006)
 <li>Eagle: The Making of an Asian-American President    (2000)
-<li>The Earl and the Fairy  (2012)
+<li>Earl and the Fairy  (2012)
 <li>Eat-Man     (1997)
 <li>El Hazard: The Magnificent World    (2000)
 <li>Embracing Love (Two-In-One Edition)     (2013)
@@ -269,7 +269,7 @@ Titles
 <li>Hayate the Combat Butler    (2006)
 <li>Heartbroken Angels  (2001)
 <li>Heaven's Will   (2009)
-<li>The Heiress and the Chauffeur   (2016)
+<li>Heiress and the Chauffeur   (2016)
 <li>Helen Keller: From Darkness to Light    (2011)
 <li>Hello Kitty and Friends Free Comic Book Day (2014)
 <li>Here Is Greenwood   (2004)
@@ -278,7 +278,7 @@ Titles
 <li>Hikaru No Go    (2004)
 <li>His Favorite    (2012)
 <li>Homestuck   (2018)
-<li>The Homestuck Epilogues     (2020)
+<li>Homestuck Epilogues     (2020)
 <li>Honey and Clover    (2008)
 <li>Honey Blood     (2014)
 <li>Honey Darling   (2012)
@@ -333,12 +333,12 @@ Titles
 <li>Kuroko's Basketball     (2016)
 <li>La Corda d'Oro  (2006)
 <li>La Quinta Camera- The Fifth Room    (2011)
-<li>The Law of Ueki (2006)
+<li>Law of Ueki (2006)
 <li>LBX Halloween Comic Fest (2014)
 <li>LBX: Little Battlers Experience     (2014)
 <li>Leave It to PET!    (2009)
-<li>The Legend of Kamui: Perfect Collection     (1998)
-<li>The Legend of Zelda (2008)
+<li>Legend of Kamui: Perfect Collection     (1998)
+<li>Legend of Zelda (2008)
 <li>Legendz (2005)
 <li>Levius  (2019)
 <li>Levius/est  (2019)
@@ -356,13 +356,13 @@ Titles
 <li>Lycanthrope Leo (1997)
 <li>Macross II  (1992)
 <li>Magi: The Labyrinth of Magic    (2013)
-<li>The Magic Touch     (2009)
+<li>Magic Touch     (2009)
 <li>Magical Pokemon Journey (2000)
 <li>Magical Pokemon Journey (2000)
 <li>Mai the Psychic Girl    (1995)
 <li>Maid-sama! (2-in-1 Edition)     (2015)
 <li>Maison Ikkoku   (1992)
-<li>The Man of Tango    (2013)
+<li>Man of Tango    (2013)
 <li>Manga Vizion    (1995)
 <li>Maoh: Juvenile Remix    (2010)
 <li>Mär (2005)
@@ -436,12 +436,12 @@ Titles
 <li>Pokemon - Electric Pikachu Boogaloo (1999)
 <li>Portus  (2007)
 <li>Pretty Face     (2007)
-<li>The Prince of Tennis    (2004)
+<li>Prince of Tennis    (2004)
 <li>Princess Mononoke   (2006)
-<li>The Professional: Golgo 13  (1991)
+<li>Professional: Golgo 13  (1991)
 <li>Project Arms    (2003)
 <li>Promise (1994)
-<li>The Promised Neverland  (2017)
+<li>Promised Neverland  (2017)
 <li>Psyren  (2011)
 <li>Pulp    (1997)
 <li>Pulp: Manga for Grownups    (1997)
@@ -459,13 +459,13 @@ Titles
 <li>Rasetsu     (2009)
 <li>Real    (2008)
 <li>Reborn! (2006)
-<li>The Record of a Fallen Vampire  (2008)
+<li>Record of a Fallen Vampire  (2008)
 <li>Record of Grancrest War     (2018)
 <li>Red River   (2004)
 <li>Requiem of the Rose King    (2015)
 <li>Resident Evil Halloween Comic Fest (2014)
 <li>Resident Evil: The Marhawa Desire   (2014)
-<li>The Return of Lum * Urusei Yatsura  (1995)
+<li>Return of Lum * Urusei Yatsura  (1995)
 <li>Revolutionary Girl Utena    (2001)
 <li>Rin-ne  (2009)
 <li>Riot    (1995)
@@ -577,7 +577,7 @@ Titles
 <li>Tough   (2005)
 <li>Train_Man: Densha Otoko (2006)
 <li>Transformers: A Visual History  (2019)
-<li>A Tropical Fish Yearns for Snow     (2019)
+<li>Tropical Fish Yearns for Snow     (2019)
 <li>Tuxedo Gin  (2003)
 <li>Twin Star Exorcists: Onmyoji    (2015)
 <li>Uglydoll Comics     (2013)
@@ -606,8 +606,8 @@ Titles
 <li>W Juliet    (2004)
 <li>Wanted  (2008)
 <li>Wāqwāq  (2009)
-<li>The Water Dragon's Bride    (2017)
-<li>The Way of the Househusband     (2019)
+<li>Water Dragon's Bride    (2017)
+<li>Way of the Househusband     (2019)
 <li>We Never Learn  (2018)
 <li>We Were There   (2008)
 <li>Wedding Peach   (2003)
@@ -619,7 +619,7 @@ Titles
 <li>Winx Club   (2012)
 <li>Wolf's Rain     (2004)
 <li>World Trigger   (2014)
-<li>The World's Greatest First Love     (2015)
+<li>World's Greatest First Love     (2015)
 <li>X (3-in-1)  (2011)
 <li>X/1999  (1995)
 <li>Xenon: Heavy Metal Warrior  (1991)
@@ -627,7 +627,7 @@ Titles
 <li>Yarichin Bitch Club     (2019)
 <li>Yo-Kai Watch    (2015)
 <li>Yona of the Dawn    (2016)
-<li>The Young Master’s Revenge  (2018)
+<li>Young Master’s Revenge  (2018)
 <li>Yu-Gi-Oh    (1995)
 <li>Yukarism    (2014)
 <li>Yume Kira: Dream Shoppe     (2007)
