--- a/index.html
+++ b/index.html
@@ -4311,6 +4311,20 @@
 </tr>
 
 <tr>
+<td>Amazing Comics</td>
+<td>1987</td>
+<td>Publisher</td>
+<td><a href="Amazing1987/Amazing1987.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Amazing Comics Premieres</td>
+<td>1987</td>
+<td>Amazing</td>
+<td><a href="Amazing1987/Amazing1987.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Amazing Cynicalman</td>
 <td>1987</a>
 <td>Eclipse
@@ -8201,6 +8215,13 @@
 </tr>
 
 <tr>
+<td>Barney The Invisible Turtle</td>
+<td>1987</td>
+<td>Amazing</td>
+<td><a href="Amazing1987/Amazing1987.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Barnum! In Secret Service To The USA</td>
 <td>2005</td>
 <td>Vertigo</td>
@@ -10733,6 +10754,13 @@
 <td>2001</td>
 <td>Marvel</td>
 <td><a href="Blink/Blink.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Blip And The C.C.A.D.S.</td>
+<td>1987</td>
+<td>Amazing</td>
+<td><a href="Amazing1987/Amazing1987.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18349,6 +18377,13 @@
 </tr>
 
 <tr>
+<td>Daemon Mask</td>
+<td>1987</td>
+<td>Amazing</td>
+<td><a href="Amazing1987/Amazing1987.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Daemonstorm</td>
 <td>1996</td>
 <td>Caliber</td>
@@ -21581,6 +21616,13 @@
 </tr>
 
 <tr>
+<td>Domino Chance: Roach Extraorinaire</td>
+<td>1987</td>
+<td>Amazing</td>
+<td><a href="Amazing1987/Amazing1987.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Don Bluth Presents Space Ace</td>
 <td>2009</td>
 <td>Arcana</td>
@@ -24325,8 +24367,22 @@
 <tr>
 <td>Ex-Mutants</td>
 <td>1987</td>
+<td>Amazing</td>
+<td><a href="Amazing1987/Amazing1987.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ex-Mutants</td>
+<td>1987</td>
 <td>Eternity</td>
 <td><a href="EternityComics/EternityComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ex-Mutants: The Special Edition</td>
+<td>1987</td>
+<td>Amazing</td>
+<td><a href="Amazing1987/Amazing1987.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28168,6 +28224,13 @@
 <td>1984</td>
 <td>Publisher</td>
 <td><a href="Gainax/Gainax.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gajit Gang</td>
+<td>1987</td>
+<td>Amazing</td>
+<td><a href="Amazing1987/Amazing1987.html">Details</a></td>
 </tr>
 
 <tr>
@@ -34726,6 +34789,13 @@
 <td>1924</td>
 <td>Creator</td>
 <td><a href="JackDavis/JackDavis.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jack Frost</td>
+<td>1987</td>
+<td>Amazing</td>
+<td><a href="Amazing1987/Amazing1987.html">Details</a></td>
 </tr>
 
 <tr>
@@ -48850,6 +48920,13 @@
 </tr>
 
 <tr>
+<td>Phigments</td>
+<td>1987</td>
+<td>Amazing</td>
+<td><a href="Amazing1987/Amazing1987.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Phil Foglio</td>
 <td>1956</td>
 <td>Creator</td>
@@ -59389,6 +59466,13 @@
 </tr>
 
 <tr>
+<td>Sun Runners Christmas Special</td>
+<td>1987</td>
+<td>Amazing</td>
+<td><a href="Amazing1987/Amazing1987.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sunbeam</td>
 <td>1926</td>
 <td>Amalgamated</td>
@@ -60107,6 +60191,13 @@
 <td>2003</td>
 <td>CrossGen</td>
 <td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tales Of The Sun Runners</td>
+<td>1987</td>
+<td>Amazing</td>
+<td><a href="Amazing1987/Amazing1987.html">Details</a></td>
 </tr>
 
 <tr>
@@ -64408,6 +64499,13 @@
 <td>1856</td>
 <td>Creator</td>
 <td><a href="WWDenslow/WWDenslow.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wabbit Wampage</td>
+<td>1987</td>
+<td>Amazing</td>
+<td><a href="Amazing1987/Amazing1987.html">Details</a></td>
 </tr>
 
 <tr>
