--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -539,6 +539,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse252.jpg">Scorpion King</a> (2002)
 <li><a href="Darkhorse253.jpg">Scream</a> (2008)
 <li><a href="Darkhorse254.jpg">Secret</a> (2007)
+<li><a href="Darkhorse347.jpg">Secret Of The Salamander</a> (1992)
 <li><a href="Darkhorse255.jpg">Seeds</a> (2012)
 <li><a href="Darkhorse256.jpg">Serenity</a> (2005)
 <li><a href="../Groo/Groo.html">Sergio Aragonés' Groo</a> (1998)
