--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -154,6 +154,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics134.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics135.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics136.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics137.jpg"></div>
 
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -338,6 +339,7 @@ Titles
 <li><a href="Fantagraphics132.jpg">Wheela, Biker Bitch of the Apocalypse</a> (2007)    
 <li><a href="Fantagraphics133.jpg">Whot Not!</a> (1994)
 <li><a href="Fantagraphics134.jpg">Wipeout</a> (2003)
+<li><a href="Fantagraphics137.jpg">Worn Tuff Elbow</a> (2004)
 <li><a href="Fantagraphics135.jpg">Wuvable Oaf</a> (2015)
 <li><a href="../JoeSacco/JoeSacco.html">Yahoo</a> (1988)
 <li><a href="../Zap/zap.html">Zap</a> (2016)
