--- a/Viz/Viz.html
+++ b/Viz/Viz.html
@@ -30,6 +30,47 @@
 <div class="mySlides" style="text-align: center;"><img src="Viz10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Viz11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Viz12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz48.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz50.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz51.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Viz53.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -39,135 +80,88 @@
 </p><p>
 Titles
 </p><p>
-<li>07-Ghost    (2012)
-<li>1 World Manga   (2005)
-<li>2001 Nights     (1990)
-<li>20th Century Boys: The Perfect Edition  (2018)
-<li>7th Garden  (2016)
-<li>A, A' [A, A Prime]  (1997)
-<li>Abara: Complete Deluxe Edition  (2018)
-<li>Absolute Boyfriend  (2006)
-<li>AD Police   (1994)
-<li>Adolf   (1995)
-<li>Adventures of Panda Man     (2010)
-<li>Adventures of Taro  (2010)
-<li>After Hours     (2017)
-<li>Afterschool Charisma    (2010)
-<li>Ai Ore!     (2011)
-<li>Aishiteruze Baby     (2006)
-<li>Alice 19th  (2006)
-<li>All My Darling Daughters    (2010)
-<li>All That Pikachu!   (2006)
-<li>All You Need Is Kill    (2014)
-<li>All-New Tenchi Muyo!    (2002)
-<li>All-New Tenchi Muyo! Part Two   (2002)
-<li>Angel Sanctuary (2004)
-<li>Animerica Extra (1998)
-<li>Anonymous Noise     (2016)
-<li>Ao Haru Ride    (2018)
-<li>Aqua Knight     (2000)
-<li>Aqua Knight (2001)
-<li>Aqua Knight Part Three  (2001)
-<li>Aqua Knight Part Two    (2000)
-<li>Arata: The Legend   (2010)
-<li>Area 88     (1988)
-<li>Art of Fullmetal Alchemist  (2005)
-<li>Ashen Victor    (1997)
-<li>Assassination Classroom     (2014)
-<li>Astra Lost in Space     (2017)
-<li>Awkward Silence     (2012)
-<li>B. B. Explosion (2004)
-<li>B.O.D.Y.    (2008)
-<li>Baby &amp; Me   (2006)
-<li>Backstage Prince    (2007)
-<li>BakéGyamon  (2009)
-<li>Bakuman     (2010)
-<li>Bakune Young    (2000)
-<li>Banana Fish (1998)
-<li>Baoh    (1989)
-<li>Baron: the Cat Returns  (2005)
-<li>Barrage     (2013)
-<li>Basara  (2003)
-<li>Bastard (2001)
-<li>Battle Angel Alita  (1992)
-<li>Battle Royale: Angels' Border   (2014)
-<li>Be with You     (2008)
-<li>Beast Master    (2009)
-<li>Beastars    (2019)
-<li>Beauty Is the Beast (2005)
-<li>Beauty Pop  (2006)
-<li>Beet the Vandel Buster  (2004)
-<li>Behind the Scenes!!     (2016)
-<li>Ben 10: Omniverse Halloween Special     (2013)
-<li>Benkei in New York  2(001 )
-<li>Best of Pokemon Adventures: Red (2006)
-<li>Best of Pokemon Adventures: Yellow  (2006)
-<li>Beyblade    (2004)
-<li>Big O   (2002)
-<li>Bio-Booster Armor Guyver    (1993)
-<li>Biomega     (2010)
-<li>Black &amp; White   (1998)
-<li>Black &amp; White   (1999)
-<li>Black Bird  (2009)
-<li>Black Cat   (2006)
-<li>Black Clover    (2016)
-<li>Black Jack  (1998)
-<li>Black Jack: Operation Down Under    (1987)
-<li>Black Jack: Under the Knife (1987)
+<li><a href="Viz1.jpg">07-Ghost</a>    (2012)
+<li><a href="Viz2.jpg">1 World Manga</a>   (2005)
+<li><a href="Viz3.jpg">2001 Nights</a>     (1990)
+<li><a href="Viz4.jpg">2001 Nights: Journey Beyond Tomorrow</a>     (1991)
+<li><a href="Viz5.jpg">20th Century Boys: The Perfect Edition</a>  (2018)
+<li><a href="Viz6.jpg">7th Garden</a>  (2016)
+<li><a href="Viz7.jpg">A, A' [A, A Prime]</a>  (1997)
+<li><a href="Viz8.jpg">Abara: Complete Deluxe Edition</a>  (2018)
+<li><a href="Viz9.jpg">Absolute Boyfriend</a>  (2006)
+<li><a href="Viz10.jpg">AD Police</a> (1994)
+<li><a href="Viz11.jpg">Adolf</a>   (1995)
+<li><a href="Viz12.jpg">Adventures of Panda Man</a> (2010)
+<li><a href="Viz13.jpg">Afterschool Charisma</a>    (2010)
+<li><a href="Viz14.jpg">Ai Ore!</a>     (2011)
+<li><a href="Viz15.jpg">Aishiteruze Baby</a>     (2006)
+<li><a href="Viz16.jpg">Alice 19th</a>  (2006)
+<li><a href="Viz17.jpg">All My Darling Daughters</a>    (2010)
+<li><a href="Viz18.jpg">All That Pikachu!</a>   (2006)
+<li><a href="Viz19.jpg">All You Need Is Kill</a>    (2014)
+<li><a href="Viz20.jpg">All-New Tenchi Muyo!</a>    (2002)
+<li><a href="Viz21.jpg">Angel Sanctuary</a> (2004)
+<li><a href="Viz22.jpg">Animerica Extra</a> (1998)
+<li><a href="Viz23.jpg">Anonymous Noise</a> (2016)
+<li><a href="Viz24.jpg">Ao Haru Ride</a> (2018)
+<li><a href="Viz25.jpg">Aqua Knight</a> (2000)
+<li><a href="Viz26.jpg">Arata: The Legend</a>   (2010)
+<li><a href="Viz27.jpg">Area 88</a> (1988)
+<li><a href="Viz28.jpg">Ashen Victor</a> (1997)
+<li><a href="Viz29.jpg">Assassination Classroom</a>  (2014)
+<li><a href="Viz30.jpg">B. B. Explosion</a> (2004)
+<li><a href="Viz31.jpg">Baby &amp; Me</a> (2006)
+<li><a href="Viz32.jpg">Bakuman</a> (2010)
+<li><a href="Viz33.jpg">Banana Fish</a> (1998)
+<li><a href="Viz34.jpg">Baoh</a> (1989)
+<li><a href="Viz35.jpg">Basara</a>  (2003)
+<li><a href="Viz36.jpg">Bastard</a> (2001)
+<li><a href="Viz37.jpg">Battle Angel Alita</a> (1992)
+<li><a href="Viz38.jpg">Beastars</a> (2019)
+<li><a href="Viz39.jpg">Beauty Is the Beast</a> (2005)
+<li><a href="Viz40.jpg">Beauty Pop</a> (2006)
+<li><a href="Viz41.jpg">Beet the Vandel Buster</a>  (2004)
+<li><a href="Viz42.jpg">Behind the Scenes!!</a> (2016)
+<li><a href="Viz43.jpg">Ben 10: Omniverse Halloween Special</a>    (2013)
+<li><a href="Viz44.jpg">Benkei in New York</a>  (2001)
+<li><a href="Viz45.jpg">Beyblade</a> (2004)
+<li><a href="Viz46.jpg">Big O</a> (2002)
+<li><a href="Viz47.jpg">Bio-Booster Armor Guyver</a>    (1993)
+<li><a href="Viz48.jpg">Biomega</a>     (2010)
+<li><a href="Viz49.jpg">Black &amp; White   (1998)
+<li><a href="Viz50.jpg">Black Bird</a>  (2009)
+<li><a href="Viz51.jpg">Black Cat</a> (2006)
+<li><a href="Viz52.jpg">Black Clover</a> (2016)
+<li><a href="Viz53.jpg">Black Jack</a>  (1998)
 <li>Black Lagoon    (2008)
-<li>Black Rose Alice    (2014)
 <li>Black Torch     (2018)
-<li>Blanc et Noir: Takeshi Obata Illustrations  (2016)
-<li>Blank Slate     (2008)
 <li>Bleach  (2004)
 <li>Bleach 3-in-1   (2011)
-<li>Bleach Souls. Official Character Book   (2008)
 <li>Blood the Last Vampire (2002)
-<li>Bloody Mary     (2015)
 <li>Blue Exorcist   (2011)
-<li>Blue Morning    (2013)
 <li>Blue Spring     (2004)
-<li>Bobobo-bo Bo-bobo   (2005)
 <li>Bokurano: Ours  (2010)
-<li>Bond of Dreams, Bond of Love    (2012)
 <li>Boruto: Naruto Next Generations     (2017)
 <li>Boys Over Flowers   (2003)
-<li>Boys Over Flowers: Jewelry Box  (2009)
 <li>Buso Renkin (2006)
-<li>Butterflies, Flowers    (2009)
-<li>Cactus’s Secret     (2010)
-<li>Cain Saga   (2006)
 <li>Candy Color Paradox     (2019)
-<li>Captive Hearts  (2008)
 <li>Case Closed     (2004)
-<li>Castle in the Sky   (2003)
 <li>Cat Eyed Boy    (2008)
-<li>Cats of the Louvre  (2019)
 <li>Ceres Celestial Legend  (2001)
 <li>Cheeky Angel    (2004)
-<li>Chicago (2002)
 <li>Children of the Sea     (2009)
 <li>Children of the Whales  (2017)
-<li>ChocoMimi   (2009)
 <li>Claymore    (2006)
-<li>Cobra   (1990)
-<li>Color Bleach+: Bleach Official Bootleg  (2010)
-<li>Complete Art of Fullmetal Alchemist     (2018)
 <li>Cowa!   (2008)
 <li>Coyote  (2018)
 <li>Crimson Hero    (2005)
 <li>Crimson Spell   (2013)
 <li>Cross Game  (2010)
-<li>Crown of Love   (2010)
 <li>Crying Freeman  (1989)
 <li>D. Gray-Man     (2006)
-<li>D.Gray-Man 3-in-1   (2013)
-<li>D.Gray-man Illustrations: Noche     (2011)
 <li>Dance Till Tomorrow (1998)
-<li>Dawn of the Arcana  (2011)
 <li>Daytime Shooting Star   (2019)
 <li>Dead Dead Demon’s Dededede Destruction  (2018)
-<li>Deadman Wonderland  (2014)
 <li>Death Note  (2005)
 <li>Demon Love Spell    (2012)
 <li>Demon Prince of Momochi House   (2015)
