--- a/index.html
+++ b/index.html
@@ -1227,6 +1227,20 @@
 </tr>
 
 <tr>
+<td>A-Plus Comics</td>
+<td>1987</td>
+<td>Publisher</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
+</tr>
+
+<tr>
+<td>A-Plus Presente</td>
+<td>1989</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
+</tr>
+
+<tr>
 <td>A-Team</td>
 <td>1983</td>
 <td>Marvel</td>
@@ -2063,6 +2077,20 @@
 </tr>
 
 <tr>
+<td>Adventure Into The Unknown</td>
+<td>1990</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adventure Into The Unknown Halloween Special</td>
+<td>1991</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures Into Weird Worlds</td>
 <td>1952</td>
 <td>Atlas</td>
@@ -2130,6 +2158,13 @@
 <td>1994</td>
 <td>Marvel</td>
 <td><a href="AdventuresOfCyclopsAndPhoenix/AdventuresCyclopsPhoenix.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adventures Of Dr. Graves</td>
+<td>1991</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5900,6 +5935,13 @@
 </tr>
 
 <tr>
+<td>Arik Khan</td>
+<td>1991</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Arizona Kid</td>
 <td>1950</td>
 <td>Atlas</td>
@@ -6970,6 +7012,13 @@
 </tr>
 
 <tr>
+<td>Atomic Mouse</td>
+<td>1990</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Atomic Overdrive</td>
 <td>1997</td>
 <td>Caliber</td>
@@ -7044,6 +7093,13 @@
 <td>2009</td>
 <td>Alterna</td>
 <td><a href="Alterna/Alterna.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Attack Of The Mutant Monsters</td>
+<td>1991</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17004,6 +17060,13 @@
 </tr>
 
 <tr>
+<td>Corbo</td>
+<td>1987</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cormac Mac Art</td>
 <td>1990</td>
 <td>Dark Horse</td>
@@ -26093,6 +26156,13 @@
 </tr>
 
 <tr>
+<td>Festival</td>
+<td>1989</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Feud</td>
 <td>1993</td>
 <td>Epic</td>
@@ -27090,6 +27160,13 @@
 <td>1951</td>
 <td>ACG</td>
 <td><a href="ForbiddenWorlds/ForbiddenWorlds.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Forbidden Worlds</td>
+<td>1991</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32447,10 +32524,24 @@
 </tr>
 
 <tr>
+<td>Herbie</td>
+<td>1990</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hercules</td>
 <td>1982</td>
 <td>Marvel</td>
 <td><a href="Hercules/Hercules.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hot 'N Cold Heroes</td>
+<td>1990</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
 </tr>
 
 <tr>
@@ -41055,6 +41146,13 @@
 <td>2019</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Magicman</td>
+<td>1991</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
 </tr>
 
 <tr>
@@ -56428,6 +56526,13 @@
 </tr>
 
 <tr>
+<td>Six-Gun Heroes</td>
+<td>1990</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Six-Gun Western</td>
 <td>1957</td>
 <td>Atlas</td>
@@ -60124,6 +60229,20 @@
 </tr>
 
 <tr>
+<td>Swords Of Valor</td>
+<td>1990</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Swords Of Valor's Robin Hood</td>
+<td>1991</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Swordsmith Assassin</td>
 <td>2009</td>
 <td>Boom!</td>
@@ -61100,6 +61219,13 @@
 <td>1993</td>
 <td>Vortex</td>
 <td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Thief Of Sherwood</td>
+<td>1991</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
 </tr>
 
 <tr>
@@ -65003,6 +65129,13 @@
 <td>1989</td>
 <td>Marvel</td>
 <td><a href="War/War.html">Details</a></td>
+</tr>
+
+<tr>
+<td>War</td>
+<td>1991</td>
+<td>A-Plus</td>
+<td><a href="A-Plus/A-Plus.html">Details</a></td>
 </tr>
 
 <tr>
