--- a/index.html
+++ b/index.html
@@ -10652,7 +10652,7 @@
 </tr>
 
 <tr>
-<td>Blackthorne</td>
+<td>Blackthorne Publishing</td>
 <td>1986</td>
 <td>Publisher</td>
 <td><a href="Blackthorne/Blackthorne.html">Details</a></td>
@@ -15288,6 +15288,13 @@
 <td>1952</td>
 <td>Youthful</td>
 <td><a href="Youthful/Youthful.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Chillville</td>
+<td>1992</td>
+<td>Tangram</td>
+<td><a href="Tangram/Tangram.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25373,6 +25380,13 @@
 </tr>
 
 <tr>
+<td>Fang</td>
+<td>1991</td>
+<td>Tangram</td>
+<td><a href="Tangram/Tangram.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fangs Of K'aath</a>
 <td>1997</td>
 <td>MU Press</td>
@@ -27908,6 +27922,20 @@
 <td>Full Circle</td>
 <td>2004</td>
 <td>Publisher</td>
+<td><a href="FullCircle/FullCircle.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Full Cirkle</td>
+<td>2004</td>
+<td>Full Circle</td>
+<td><a href="FullCircle/FullCircle.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Full Cirkle II</td>
+<td>2007</td>
+<td>Full Circle</td>
 <td><a href="FullCircle/FullCircle.html">Details</a></td>
 </tr>
 
@@ -46730,6 +46758,27 @@
 </tr>
 
 <tr>
+<td>Night Realm Presents: Nathan Impaler, Monster Hunter</td>
+<td>1990</td>
+<td>Night Realm</td>
+<td><a href="NightRealmPublishing/NightRealmPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Night Realm Presents: Nathan Impaler, Monster Hunter Werewolf Special</td>
+<td>1993</td>
+<td>Night Realm</td>
+<td><a href="NightRealmPublishing/NightRealmPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Night Realm Publishing</td>
+<td>1990</td>
+<td>Publisher</td>
+<td><a href="NightRealmPublishing/NightRealmPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Nights Dominion</td>
 <td>2016</td>
 <td>Oni</td>
@@ -58115,6 +58164,13 @@
 </tr>
 
 <tr>
+<td>Springheeled Jack</td>
+<td>2006</td>
+<td>Full Circle</td>
+<td><a href="FullCircle/FullCircle.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Spy And Counterspy</td>
 <td>1949</td>
 <td>ACG</td>
@@ -60264,6 +60320,13 @@
 </tr>
 
 <tr>
+<td>Synthetic Assassin</td>
+<td>1986</td>
+<td>Night Realm</td>
+<td><a href="NightRealmPublishing/NightRealmPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Syphons</td>
 <td>1986</td>
 <td>Now</td>
@@ -60562,6 +60625,13 @@
 <td>1989</td>
 <td>New England</td>
 <td><a href="TalesTooTerribleToTell/TalesTooTerribleToTell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tangram Publishing</td>
+<td>1992</td>
+<td>Publisher</td>
+<td><a href="Tangram/Tangram.html">Details</a></td>
 </tr>
 
 <tr>
@@ -61219,6 +61289,13 @@
 <td>1993</td>
 <td>Vortex</td>
 <td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Thicker Than Blood</td>
+<td>2007</td>
+<td>Full Circle</td>
+<td><a href="FullCircle/FullCircle.html">Details</a></td>
 </tr>
 
 <tr>
@@ -66096,6 +66173,13 @@
 </tr>
 
 <tr>
+<td>Werewolf</td>
+<td>1988</td>
+<td>Blackthorne</td>
+<td><a href="Blackthorne/Blackthorne.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Werewolf At Large</td>
 <td>1989</td>
 <td>Eternity</td>
@@ -66422,6 +66506,13 @@
 <td>1992</td>
 <td>Tundra</td>
 <td><a href="TundraUK/TundraUK.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Whitechapel Freak</td>
+<td>2004</td>
+<td>Full Circle</td>
+<td><a href="FullCircle/FullCircle.html">Details</a></td>
 </tr>
 
 <tr>
